--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,152 @@
-.container {
-  padding: 0 2rem;
+.heroSection{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1.5rem;
+  margin-top: 4rem;
 }
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.left{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  gap: 1.5rem;
 }
-
-.footer {
+.left h1{
+  color: white;
+  max-width: 50rem;
+}
+.left h1 span{
+  color: var(--primary-color);
+}
+.left p{
+  font-size: 1.125rem;
+  color: var(--gray);
+  max-width: 600px;
+}
+.left a{
+  width: fit-content;
+}
+.right{
+  position: relative;
+}
+.hoodieImg{
+  max-width: 35rem;
+  width: 100%;
+  min-width: 24rem;
+  height: auto;
+  position: relative;
+  z-index: 2;
+}
+.bottomHeading{
+  border: 1px solid var(--gray);
+  padding: .5rem;
+  width: 100%;
+  color: var(--gray);
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
   align-items: center;
+  gap: .5rem;
+  font-size: 1.125rem;
 }
+.bottomHeading b{
+  color: white;
+}
+.colorBox{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: var(--primary-color);
+}
+.logoPattren{
+  position: absolute;
+  width: 200px;
+  height: auto;
+  top: 7rem;
+  left: -1rem;
+  z-index: 1;
+}
+.dotPattren{
+  position: absolute;
+  bottom: 5rem;
+  right: 0;
+  z-index: 3;
+  display: grid;
+  grid-template-columns: repeat(5, 2px);
+  grid-template-rows: repeat(5, 2px);
+  gap: 1rem;
+}
+.dotPattren span{
+  display: inline-block;
+  width: 2px;
+  height: 2px;
+  background-color: white;
 
-.footer a {
+}
+.quote{
+  max-width: fit-content;
+  width: 100%;
+  margin: 8rem auto;
+  /* margin-top: 8rem; */
+  position: relative;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  flex-direction: column;
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.quote div{
+  border: 1px solid var(--gray);
+  padding: 2rem 1.5rem;
+  color: white;
+  width: fit-content;
 }
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
+.quote div:nth-child(2){
+  padding: 1rem;
   font-size: 1.5rem;
+  border-top: none;
+  align-self: end;
+  position: relative;
+}
+.comma{
+  position: absolute;
+  background-color: var(--dark-bg);
+  font-size: 5rem;
+  font-weight: 600;
+  font-family: sans-serif;
+  height: 3rem;
+  color: var(--gray);
+  transform: skewX(10deg);
+  user-select: none;
+}
+.comma1{
+  top: -30px;
+  left: 2rem;
+}
+.comma2{
+  top: -30px;
+  right: 2rem;
+  height: 2rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+@media (max-width:1100px) {
+  .logoPattren{
+    width: 120px;
+    left: 0;
+  }
 }
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
+@media (max-width:1024px) {
+  .heroSection{
     flex-direction: column;
+    align-items: flex-start;
+    gap: .5rem;
+    margin-top: 5rem;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
+  .left{
+    gap: 1rem;
   }
-  .code {
-    background: #111;
+  .right{
+    align-self: flex-end;
   }
-  .logo img {
-    filter: invert(1);
+  .hoodieImg{
+    max-width: 28rem;
+    min-width: 16rem;
+  }
+  .quote{
+    margin-top: 5rem;
   }
 }
