--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,45 @@
-html,
-body {
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+  font-family: 'Fira Code', monospace;
 }
-
+:root{
+  --primary-color: #C778DD;
+  --gray: #ABB2BF;
+  --dark-gray: #2C3036;
+  --dark-bg: #282C33;
+}
+html,
+body {
+  font-size: 16px;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
+button{
+  width: max-content;
+  padding: .5rem 1rem;
+  font-size: 1.125rem;
+  border: 1px solid;
+  cursor: pointer;
+  color: white;
+  border-color: var(--primary-color);
+  background: transparent;
+  transition: 150ms;
+}
+button:hover{
+  background: rgba(199, 120, 221, 0.2);
+}
+button:disabled{
+  border-color: var(--gray);
+  background: rgba(171, 178, 191, 0.2);
 }
 
-@media (prefers-color-scheme: dark) {
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +47,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
